Added navbar and separated the app into three pages: main, admin and main

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,16 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+
+#main-container {
+  margin-top: 50px;
+}
+
+
+
+
+/* ====================================
+Generated from Yeoman */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
