--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,33 +1,14 @@
 <div class="data">
-
-    {{data}}
-    <button ng-click='getPictures()'>Get!</button>
-    <ul>
-        <li ng-repeat='picture in pictures' >
-            <img ng-src="{{picture.picURL}}" />
-            <div class="info">
-                <span class="user">User: {{picture.user.username}}</span>
-                <span class="tags">
-                    <span class="tag" ng-repeat="tag in picture.tags">
-                        #{{tag}}
-                    </span>
-                </span>
-            </div>
-        </li>
-    </ul>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    <img ng-src="{{currentPhoto.picURL}}" />
+    <div class="instagram-info">
+        <p class="user">User: {{currentPhoto.user.username}}</p>
+        <p class="tags">
+            <span class="tag" ng-repeat="tag in hashtagArray">
+                #{{tag}}
+            </span>
+        </p>
+    </div>
+    <div class="song-info">
+        <p>{{resultSong.artist_name}} - {{resultSong.title}}</p>
+    </div>
 </div>
