--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,11 +2,26 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+@import 'admin';
 
+body {
+  background-color: #333;
+}
 
 #main-container {
   margin-top: 50px;
 }
+
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #444;
+}
+
+.instagram-info, .song-info {
+  color: white;
+}
+
 
 
 
@@ -45,13 +60,6 @@ body {
     line-height: 40px;
     padding-bottom: 19px;
   }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
