--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,3 +1,6 @@
 <h1>admin page</h1>
 
-<a class="spotify-button" ng-href="{{loginURL}}">Login in with Spotify</a>
+<a ng-href="{{loginURL}}">Login in with Spotify</a>
+<div>
+    <input name='tag'></input>
+</div>
