--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,6 @@
 <div class="data">
 
+    <iframe ng-src="{{playerURL}}" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
     {{data}}
     <button ng-click='getPictures()'>Get!</button>
     <ul>
