--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,97 +6,68 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 #main-container {
   margin-top: 50px;
+  width:100%;
+  
 }
 
 
-
-
-/* ====================================
-Generated from Yeoman */
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+#background{	
+  position:absolute;
+  right:0;
+  top:0;
+  left:0;
+  bottom:0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position:absolute;
+  width:100%;
+  z-index:-1;
+  height:100%;
 }
+#overlay{
+  background: rgba(46,46,46, 0.8);
 
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+#headline{
+	padding-top:2%;
+	text-align: center;
 }
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
+div.images{
+  position:absolute;
+  display:inline-block;
 }
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+div.center{
+	position:relative;
+	text-align: center;
 }
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
+div.box{
+  background: rgba(0,0,0, 1);
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
+  width: 32%;
+  height: 0;
+  padding-bottom: 32%;
+  margin: 2% 5%;
+  vertical-align: top;
+  display:inline-block;
+}
+img.pic{
+  overflow: hidden;
+  display:block;
+}
+.wide {
+    height:100%;
+}
+.tall {
+    width:100%;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
 
-  p + h4 {
-    margin-top: 28px;
-  }
-}
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
