Now display current artist and song.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,7 @@
 <div class="data">
     <img ng-src="{{currentPhoto.picURL}}" />
+    <p>{{artist}}</p>
+    <p>{{song}}></p>
     <div class="instagram-info">
         <p class="user">User: {{currentPhoto.user.username}}</p>
         <p class="tags">
