--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import 'admin';
 @import 'footer';
 
+
+
 *{
   padding:0;
   margin:0;
@@ -32,11 +34,11 @@ p{
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
   background-size: cover !important;
-  -webkit-filter: blur(7px);
-  -moz-filter: blur(7px);
-  -o-filter: blur(7px);
-  -ms-filter: blur(7px);
-  filter: blur(7px);
+  -webkit-filter: blur(7px) brightness(60%);
+  -moz-filter: blur(7px) brightness(60%);
+  -o-filter: blur(7px) brightness(60%);
+  -ms-filter: blur(7px) brightness(60%);
+  filter: blur(7px) brightness(60%);
   width:100%;
   z-index:-1;
   height:100%;
@@ -50,8 +52,9 @@ p{
 
 }
 #headline{
-	padding-top:2%;
 	text-align: center;
+  color: white;
+  text-shaddow: #444 0px 0px 5px;
 }
 
 div.images{
@@ -66,45 +69,72 @@ div.center{
 div.box{
   border: none;
   text-align: center;
-  width: 28%;
+  width: 32%;
   height: 0;
-  padding-bottom: 28%;
+  padding-bottom: 32%;
   margin: 2% 5% 0% 5%;
   vertical-align: top;
   display:inline-block;
   overflow:hidden;
+  img {
+    width: 100%;
+  }
 }
 img.pic{
   overflow: hidden;
   display:block;
-border: none;
+  border: none;
+  width: 100%;
 }
 .info{
   text-align:left;
   border: none;
-  width: 28%;
+  width: 32%;
   height: 0;
-  padding-bottom: 28%;
+  padding-bottom: 32%;
   margin: 2% 5%;
   vertical-align: top;
+  text-shaddow: #333 0px 0px 12px;
 }
 .info{
   display:inline-block;
   font-family: helvetica;
-  font-weight:bold;
+  font-weight: 300;
+  .title {
+    font-size: 2em;
+  }
+  .artist {
+    font-size: 1.5em;
+  }
+  .play {
+    font-size: 2em;
+    margin-left: -5px;
+  }
 }
-.profilepic, .user, .tags{
+.inline {
   display:inline-block;
 }
-.profilepic{
-  border-radius:50%;
-  border: 3px solid white;
+.profilepic {
+  line-height: 2em;
+  img{
+    border-radius:50%;
+    border: 3px solid white;
+    width: 100px;
+  }
+}
+.profilepic, .tags {
+  padding: 0;
 }
 .wide {
     height:100%;
 }
 .tall {
     width:100%;
+}
+.main-logo {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
 }
 
 
