--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,38 +3,48 @@
     <div id="background" style="background: url({{currentPhoto.picURL}}) no-repeat center center fixed"><div id="overlay"></div></div>
 
     <div id="headline">
-        <a href="about.html"><img src="images/Quepic_logo_solid.png"/></a>
+        <h2>#{{currentHashtag}}</h2>
     </div>
 
     <div id="images">
-    <div class="center">
-      <div class="box">
-        <img id="insta" ng-src="{{currentPhoto.picURL}}" />
-      </div>
-      <div class="box">
-        <img src="images/moderat.jpg"/>
+        <div class="center">
+          <div class="box">
+            <img id="insta" ng-src="{{currentPhoto.picURL}}" />
+          </div>
+          <div class="box">
+            <img src="images/moderat.jpg"/>
 
-      </div>
-      <div class="info">
-	<img class="profilepic" ng-src="{{currentPhoto.user.profile_picture}}" />
+          </div>
+          <div class="info row">
+            <div class="profilepic col-xs-4">
+    	       <img ng-src="{{currentPhoto.user.profile_picture}}" />
+               <p>{{currentPhoto.user.username}}</p>
+            </div>
+            <div class="tags col-xs-8">
+                <p>
+                    <span ng-repeat="tag in hashtagArray">
+                        #{{tag}}
+                    </span>
+                </p>
+            </div>
+          </div>
 
-        <p class="user">User: {{currentPhoto.user.username}}</p>
-        <p class="tags">
-            <span class="tag" ng-repeat="tag in hashtagArray">
-                #{{tag}}
-            </span>
-        </p>
-      </div>
 
+    	
+          <div class="info">
+            <div class="song-info">
+                <div class="col-xs-1 play"><span class="glyphicon glyphicon-play"></span></div>
+                <div class="col-xs-11">
+                  <p class="title">{{resultSong.title}}</p>
+                  <p class="artist">{{resultSong.artist_name}}</p>
+              </div>
+            </div>
+          </div>
 
-	
-      <div class="info">
-        <div class="song-info">
-          <p>{{resultSong.artist_name}} - {{resultSong.title}}</p>
         </div>
-      </div>
-
     </div>
+    <div class="col-xs-12 main-logo">
+        <a href="about.html" class="pull-right"><img src="images/Quepic_logo_solid.png"/></a>
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
