--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <div id="background" style="background: url({{currentPhoto.picURL}}) no-repeat center center fixed"><div id="overlay"></div></div>
 
     <div id="headline">
-        <h2>#{{currentHashtag}}</h2>
+        <h2><span id='hashtag'>#</span>{{currentHashtag}}</h2>
     </div>
 
     <div id="images">
